<resources>
	<string name="app_name">Bokotan</string>
	<string name="editNumberText">開始位置を指定</string>
	<string name="seekBarStrEng">英語の読み上げの速さを指定します</string>
	<string name="seekBarStrJpn">日本語の読み上げ速さを指定します。</string>
	<string name="pip">PIPモード</string>
	<string name="pipYomikomi">読み込み中</string>
	<string name="select_1">選択肢1</string>
	<string name="select_2">選択肢2</string>
	<string name="select_3">選択肢3</string>
	<string name="select_4">選択肢4</string>
	<string name="mondai">問題文</string>
	<string name="kaitou">前問の解答</string>
	<string name="next">next</string>
	<string name="idonknow">わからない</string>
	<string name="kaisetu">解説</string>
	<string name="textview">TextView</string>
	<string name="hatuon">発音</string>
	<string name="hint">ヒント</string>
	<string name="koukaon">効果音</string>
	<string name="delete">削除</string>
	<string name="start">start</string>
	<string name="kensaku">ここに入力して検索</string>
	<string name="fromstart">最初から</string>
	<string name="pipb">PIP</string>
	<string name="bangouhenkou">番号変更</string>
	<string name="now">now=</string>
	<string name="hanni">範囲</string>
	<string name="hinsi">品詞</string>
	<string name="mode">モード</string>
	<string name="_1q">1級</string>
	<string name="_p1q">準1級</string>
	<string name="_2q">2級</string>
	<string name="_p2q">準2級</string>
	<string name="_1_ex">1級EX</string>
	<string name="sougou">総合</string>
	<string name="_0y">ユメタン0基</string>
	<string name="yumetan08">ユメタン0本</string>
	<string name="yumetan1">ユメタン1</string>
	<string name="yumetan2">ユメタン2</string>
	<string name="version_yy_mm_dd">version:YY.MM.DD</string>
	<string name="settingshozon">設定保存</string>
	<string name="skipoboe">覚えた単語を飛ばす</string>
	<string name="yumetan3">ユメタン3</string>
	<string name="readsettingsfromfile">設定読み込み</string>
	<string name="skipkishutu">既出の単語をスキップ</string>
	<string name="notox">〇×演出なし</string>
	<string name="onlykiroku">記録のみ</string>
	<string name="onlyhugoukaku">不合格のみ</string>
	<string name="writecheck">書き込み確認</string>
	<string name="p1qex">準1級EX</string>
	<string name="only2huseikai">2回以上不正解のみ</string>
	<string name="skip1seikai">1回正解を飛ばす</string>
	<string name="etoj">英→日</string>
	<string name="piptate">pip縦</string>
	<string name="pipyoko">pip横</string>
	<string name="stopwheneyephone">イヤホン切断時停止</string>
	<string name="printhatuonkigou">発音記号を表示</string>
	<string name="defaultadapter">規定のアダプター</string>
	<string name="sortgyaku">ソート反転</string>
	<string name="printbeforeread">読む前に表示</string>
	<string name="alarm">alarm</string>
	<string name="jtoe">日→英</string>
	<string name="choice">選択肢</string>
	<string name="quiz_word_hatsuon">クイズで出題される単語を発音</string>
	<string name="quiz_ox_hatsuon">クイズでマルバツの効果音を再生</string>

	<string-array name="spinner_hanni">
		<item>A</item>
		<item>B</item>
		<item>C</item>
		<item>熟語</item>
		<item>全て</item>
	</string-array>

	<string-array name="spinner_hinsi">
		<item>動詞</item>
		<item>名詞</item>
		<item>形容詞</item>
		<item>まとめ</item>
	</string-array>

	<string-array name="spinner_mode">
		<item>単語</item>
		<item>文</item>
		<item>単語+文</item>
		<item>テスト(ランダム)</item>
		<item>テスト(不正解のみ)</item>
		<item>テスト(正答率順)</item>
	</string-array>

	<string-array name="spinner_kuuhaku">
		<item>オリジナル</item>
		<item>自動空白検出</item>
		<item>0.25秒カット</item>
	</string-array>

	<string-array name="spinner_hyojijun">
		<item>記録のみ</item>
		<item>不合格のみ</item>
		<item>1回正解を飛ばす</item>
		<item>2回以上不正解のみ</item>
	</string-array>

	<string-array name="spinner_book_q">
		<item>ユメタン1</item>
		<item>ユメタン2</item>
		<item>ユメタン3</item>
		<item>パス単1級</item>
		<item>パス単準1級</item>
		<item>単熟語1級</item>
		<item>単熟語準1級</item>
	</string-array>

</resources>