<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:background="@color/background"
	tools:context=".QSentakuFragment">

	<TextView
		android:id="@+id/textViewNowInput"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/now"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutOtherButton" />

	<EditText
		android:id="@+id/editTextNumber"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:autofillHints="no"
		android:ems="10"
		android:hint="@string/editNumberText"
		android:inputType="number"
		android:minHeight="48dp"
		app:layout_constraintEnd_toStartOf="@+id/linearLayoutSettings"
		app:layout_constraintStart_toEndOf="@+id/textViewNowInput"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutOtherButton" />

	<LinearLayout
		android:id="@+id/linearLayoutOption"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2.5"
				android:text="@string/hanni"
				android:textColor="@color/textcolor" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2.5"
				android:text="@string/hinsi"
				android:textColor="@color/textcolor" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="4.5"
				android:text="@string/mode"
				android:textColor="@color/textcolor" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<Spinner
				android:id="@+id/spinnerHanni"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2.5"
				android:entries="@array/spinner_hanni"
				android:popupBackground="@color/background" />

			<Spinner
				android:id="@+id/spinnerHinsi"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2.5"
				android:entries="@array/spinner_hinsi"
				android:popupBackground="@color/background" />

			<Spinner
				android:id="@+id/spinnerMode"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="4.5"
				android:entries="@array/spinner_mode"
				android:popupBackground="@color/background" />
		</LinearLayout>
	</LinearLayout>



	<LinearLayout
		android:id="@+id/linearLayoutQ"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutYume">

		<Button
			android:id="@+id/button1q"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_1q"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonP1q"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_p1q"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/button2q"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_2q"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonP2q"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_p2q"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonAll"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sougou"
			android:textColor="@color/buttontext" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayoutYume"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/linearLayoutOption">

		<Button
			android:id="@+id/buttonYume0.0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_0y"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonYume0.8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/yumetan08"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonYume1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/yumetan1"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonYume2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/yumetan2"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonYume3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/yumetan3"
			android:textColor="@color/buttontext" />
	</LinearLayout>

	<TextView
		android:id="@+id/textViewVersion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/version_yy_mm_dd"
		android:textColor="@color/textcolor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<LinearLayout
		android:id="@+id/linearLayoutSettings"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/linearLayoutOtherButton"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutQ">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal">

			<Button
				android:id="@+id/buttonPrefExport"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/settingshozon"
				android:textColor="@color/buttontext"
				android:textSize="12sp" />

			<Button
				android:id="@+id/buttonPrefImp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/readsettingsfromfile"
				android:textColor="@color/buttontext"
				android:textSize="12sp" />

		</LinearLayout>

		<Switch
			android:id="@+id/switchOnlyFirst"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/skipkishutu"
			android:textColor="@color/textcolor" />

		<Switch
			android:id="@+id/switchHyojiYakuBeforeRead"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/printbeforeread"
			android:textColor="@color/textcolor" />

		<Switch
			android:id="@+id/switchSkipOboe"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/skipoboe"
			android:textColor="@color/textcolor" />

		<Switch
			android:id="@+id/switchSkipMaruBatu"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:checked="true"
			android:text="@string/notox"
			android:textColor="@color/textcolor" />

		<Switch
			android:id="@+id/switchSortHanten"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:text="@string/sortgyaku"
			android:textColor="@color/textcolor" />

		<CheckBox
			android:id="@+id/checkBoxHatsuonkigou"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:text="@string/printhatuonkigou"
			android:textColor="@color/textcolor" />

		<CheckBox
			android:id="@+id/checkBoxDefaultAdapter"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:text="@string/defaultadapter"
			android:textColor="@color/textcolor" />

		<CheckBox
			android:id="@+id/checkBoxAutoStop"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:text="@string/stopwheneyephone"
			android:textColor="@color/textcolor" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/editTextPipYoko"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="10"
				android:hint="@string/pipyoko"
				android:inputType="numberSigned" />

			<EditText
				android:id="@+id/editTextPipTate"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="10"
				android:hint="@string/piptate"
				android:inputType="numberSigned" />
		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
		app:layout_constraintEnd_toEndOf="@+id/linearLayoutTanjukugo"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextNumber">

		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="2"
			android:background="@drawable/border">

			<RadioButton
				android:id="@+id/radioButtonEtoJ"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:checked="true"
				android:text="@string/etoj"
				android:textColor="@color/textcolor" />

			<RadioButton
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/jtoe"
				android:textColor="@color/textcolor" />
		</RadioGroup>


		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="4"
			android:background="@drawable/border">

			<RadioButton
				android:id="@+id/radioButtonOnlyKioku"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:checked="false"
				android:text="@string/onlykiroku"
				android:textColor="@color/textcolor" />

			<RadioButton
				android:id="@+id/radioButtonOnlyHugoukaku"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/onlyhugoukaku"
				android:textColor="@color/textcolor" />

			<RadioButton
				android:id="@+id/radioButton1seikai"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/skip1seikai"
				android:textColor="@color/textcolor" />

			<RadioButton
				android:id="@+id/radioButton2huseikai"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/only2huseikai"
				android:textColor="@color/textcolor" />
		</RadioGroup>

		<Spinner
			android:id="@+id/spinnerKuuhaku"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:background="@drawable/border"
			android:entries="@array/spinner_kuuhaku"
			android:popupBackground="@color/background" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayoutTanjukugo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutQ">

		<Button
			android:id="@+id/button1qEx"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_1_ex"
			android:textColor="@color/buttontext" />

		<Button
			android:id="@+id/buttonP1qEx"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/p1qex"
			android:textColor="@color/buttontext" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayoutOtherButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="@+id/linearLayoutTanjukugo"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayoutTanjukugo">

		<Button
			android:id="@+id/buttonAlarm"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/alarm"
			android:textColor="@color/buttontext"
			android:textSize="11sp" />

		<Button
			android:id="@+id/buttonWriteTest"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/writecheck"
			android:textColor="@color/buttontext"
			android:textSize="12sp" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>