<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/background">

		<ScrollView
			android:id="@+id/scrollViewSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:isScrollContainer="false"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<LinearLayout
				android:id="@+id/linearLayoutSettings"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textViewEngAndJpn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="問題出題方法" />

				<RadioGroup
					android:id="@+id/radioGropuEngAndJpn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/border"
					android:orientation="horizontal">

					<RadioButton
						android:id="@+id/radioButtonEtoJ"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:checked="true"
						android:text="@string/etoj"
						android:textColor="@color/textcolor" />

					<RadioButton
						android:id="@+id/radioButtonJtoE"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/jtoe"
						android:textColor="@color/textcolor" />

				</RadioGroup>

				<TextView
					android:id="@+id/textViewSpaceOptions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="空白" />

				<Spinner
					android:id="@+id/spinnerSpace"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:popupBackground="@color/background" />

				<TextView
					android:id="@+id/textViewHyojijun"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="表示順" />

				<Spinner
					android:id="@+id/spinnerHyojijun"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:popupBackground="@color/background" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchOnlyFirst"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:minHeight="48dp"
					android:text="@string/skipkishutu"
					android:textColor="@color/textcolor" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchHyojiYakuBeforeRead"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:minHeight="48dp"
					android:text="@string/printbeforeread"
					android:textColor="@color/textcolor" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchSkipOboe"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:minHeight="48dp"
					android:text="@string/skipoboe"
					android:textColor="@color/textcolor" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchSortHanten"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:text="@string/sortgyaku"
					android:textColor="@color/textcolor" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/checkBoxHatsuonkigou"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:text="@string/printhatuonkigou"
					android:textColor="@color/textcolor" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchQuizHatsuon"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/quiz_word_hatsuon" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/switchQuizOxKoukaon"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/quiz_ox_hatsuon" />

				<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/checkBoxAutoStop"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="48dp"
					android:text="@string/stopwheneyephone"
					android:textColor="@color/textcolor" />

				<LinearLayout
					android:id="@+id/linearLayoutPipOptions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						android:id="@+id/textViewPipAspect"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="PIP縦横比" />

					<EditText
						android:id="@+id/editTextPipYoko"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/pipyoko"
						android:inputType="numberSigned"
						android:minHeight="48dp"
						android:textColor="@color/textcolor" />

					<EditText
						android:id="@+id/editTextPipTate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/piptate"
						android:inputType="numberSigned"
						android:minHeight="48dp"
						android:textColor="@color/textcolor" />
				</LinearLayout>

			</LinearLayout>
		</ScrollView>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>